# rp2040-icm20948-i2c-lib

./: CMakeLists.txt  README.md  main.c  registers_list.txt
example/: main.c
include/: icm20948_i2c.h
src/: icm20948_i2c.c
